United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6987763 assert(kind() == EmptyExceptionState) failed: only EmptyExceptionStates can be modified
6987763 : assert(kind() == EmptyExceptionState) failed: only EmptyExceptionStates can be modified

Details
Type:
Bug
Submit Date:
2010-09-27
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
Many nightly JVMTI tests in Comp_Baseline are failing with:

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (c:\temp\jprt\p1\b\192937.rw140007\source\src\share\vm\c1\c1_ValueStack.hpp:71), pid=88204, tid=89040
#  assert(kind() == EmptyExceptionState) failed: only EmptyExceptionStates can be modified
#
# JRE version: 7.0
# Java VM: OpenJDK Client VM (20.0-b01-201009241929.rw140007.boundchecks-nofnca-fastdebug compiled mode windows-x86 )

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/1375bc8922e4
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/1375bc8922e4
                                     
2010-09-28
EVALUATION

The assert should be weakened.
                                     
2010-09-27



Hardware and Software, Engineered to Work Together