6987763: assert(kind() == EmptyExceptionState) failed: only EmptyExceptionStates can be modified

Reviewed-by: roland, kvn, iveresov