hotspot/src/share/vm/c1/c1_ValueStack.hpp
@@ -68,7 +68,12 @@ class ValueStack: public CompilationResourceObj {
   ValueStack* copy(Kind new_kind, int new_bci)   { return new ValueStack(this, new_kind, new_bci); }
   ValueStack* copy_for_parsing()                 { return new ValueStack(this, Parsing, -99); }
 
-  void set_caller_state(ValueStack* s)           { assert(kind() == EmptyExceptionState, "only EmptyExceptionStates can be modified"); _caller_state = s; }
+  void set_caller_state(ValueStack* s)           {
+    assert(kind() == EmptyExceptionState ||
+           (Compilation::current()->env()->jvmti_can_access_local_variables() && kind() == ExceptionState),
+           "only EmptyExceptionStates can be modified");
+    _caller_state = s;
+  }
 
   bool is_same(ValueStack* s);                   // returns true if this & s's types match (w/o checking locals)
 
